Add entry script

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "js-tdd-course",
   "version": "1.0.0",
   "description": "Biblioteca do curso de JS com TDD.",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
