--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Biblioteca do curso de JS com TDD.",
   "main": "src/index.js",
   "scripts": {
+    "lint": "./node_modules/.bin/eslint src/*.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
